[package]
name = "cryptopals-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
base64 = "0.21.5"
clap = { version = "4.4.12", features = ["derive"] }
hex = "0.4.3"
openssl = "0.10.70"
rand = "0.9.0"
